fixed alignment issues in friends & grp panel

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    width: 278px;
 }
 
 .group {
